--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:h2:./testdb/students
+spring.datasource.password=
+spring.datasource.username=
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql= true
+spring.jpa.show-sql=false
 spring.main.allow-circular-references=true
 spring.jpa.open-in-view=true
-spring.datasource.username=
-spring.datasource.password=
